@@ -49,6 +49,7 @@ Changes since 2.2.4
     (Agathoklis D. Hatzimanikas).
 29. Some minor documentation tweaks (Agathoklis D. Hatzimanikas)
 30. More doc tweaks (Agathoklis D. Hatzimanikas)
+31. src/slposio.c: lseek was not working properly.
 
 {{{ Previous Versions
 
